--- a/frontend/src/app/components/product/product-detail/product-detail.component.html
+++ b/frontend/src/app/components/product/product-detail/product-detail.component.html
@@ -42,20 +42,16 @@
                                     <i class="bi bi-chat-fill m-2"></i>Contactar con el vendedor
                                 </button>
                             </form>
-                            <ng-template [ngIf]="!isFavorite">
-                                <form action="/product/{{product?.id}}/addFavorite" method="post">
-                                    <button type="submit" class="btn btn-custom w-100">
-                                        <i class="bi bi-heart m-2" style="color: white;"></i>Añadir a favoritos
-                                    </button>
-                                </form>
-                            </ng-template>
-                            <ng-template [ngIf]="isFavorite">
-                                <form action="/product/{{product?.id}}/eliminateFavorite" method="post">
-                                    <button type="submit" class="btn btn-custom w-100">
-                                        <i class="bi bi-heart-fill m-2" style="color: white;"></i>Eliminar de favoritos
-                                    </button>
-                                </form>
-                            </ng-template>
+                            <ng-container *ngIf="!isFavorite">
+                                <button (click)="addToFavorites()" class="btn btn-custom w-100">
+                                    <i class="bi bi-heart m-2" style="color: white;"></i>Añadir a favoritos
+                                </button>
+                            </ng-container>
+                            <ng-container *ngIf="isFavorite">
+                                <button (click)="removeFromFavorites()" class="btn btn-custom w-100">
+                                    <i class="bi bi-heart-fill m-2" style="color: white;"></i>Eliminar de favoritos
+                                </button>
+                            </ng-container>
                         </ng-template>
 
                     </ng-template>
