--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -71,7 +71,7 @@
                 </div>
                 <div class="col-3 m-0 justify-content-center headerButtons">
                     <div>
-                        <button class="btn btn-outline-dark btn-custom headerButton" type="button" [routerLink]="['/profile']" [queryParams]="{filter: 'favorites'}">
+                        <button class="btn btn-outline-dark btn-custom headerButton" type="button" [routerLink]="['/profileFavorites']" [queryParams]="{filter: 'favorites'}">
                             <i class="bi bi-heart-fill" style="color: white;"></i>
                             <span class="fav-sellText"> Favoritos</span>
                         </button>
