--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -1,27 +1,39 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container px-4 px-lg-5 navbarContent">
-    <!-- Este es el botón para seleccionar "Inicio" sin recargar -->
-    <a class="navbar-brand" role="button" (click)="selectCategory('')">Inicio</a>
+    <!-- Button to go back to the home page without reload -->
+    <a class="navbar-brand" role="button" (click)="selectCategory('')">{{ profileScreen ? 'Perfil' : 'Inicio' }}</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul ngbNav #nav="ngbNav" class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-        <li ngbNavItem>
+        <li ngbNavItem *ngIf="!profileScreen">
           <a ngbNavLink (click)="selectCategory('Móviles')" [class.active]="selectedCategory === 'Móviles'">Móviles</a>
         </li>
-        <li ngbNavItem>
+        <li ngbNavItem *ngIf="!profileScreen">
           <a ngbNavLink (click)="selectCategory('Ordenadores')" [class.active]="selectedCategory === 'Ordenadores'">Ordenadores</a>
         </li>
-        <li ngbNavItem>
+        <li ngbNavItem *ngIf="!profileScreen">
           <a ngbNavLink (click)="selectCategory('Auriculares')" [class.active]="selectedCategory === 'Auriculares'">Auriculares</a>
         </li>
-        <li ngbNavItem>
+        <li ngbNavItem *ngIf="!profileScreen">
           <a ngbNavLink (click)="selectCategory('SmartWatches')" [class.active]="selectedCategory === 'SmartWatches'">SmartWatches</a>
         </li>
-        <li ngbNavItem>
+        <li ngbNavItem *ngIf="!profileScreen">
           <a ngbNavLink (click)="selectCategory('Otros')" [class.active]="selectedCategory === 'Otros'">Otros</a>
+        </li>
+        <li ngbNavItem *ngIf="profileScreen && isOwner">
+          <a ngbNavLink (click)="selectCategory('Favoritos')" [class.active]="selectedCategory === 'Favoritos'">Favoritos</a>
+        </li>
+        <li ngbNavItem *ngIf="profileScreen">
+          <a ngbNavLink (click)="selectCategory('Reseñas')" [class.active]="selectedCategory === 'Reseñas'">Reseñas</a>
+        </li>
+        <li ngbNavItem *ngIf="profileScreen && isOwner">
+          <a ngbNavLink (click)="selectCategory('Últimas compras')" [class.active]="selectedCategory === 'Últimas compras'">Últimas compras</a>
+        </li>
+        <li ngbNavItem *ngIf="profileScreen && isOwner">
+          <a ngbNavLink (click)="selectCategory('Últimas ventas')" [class.active]="selectedCategory === 'Últimas ventas'">Últimas ventas</a>
         </li>
       </ul>
     </div>
