--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -77,8 +77,7 @@
                         </button>
                     </div>                    
                     <div>
-                        <button class="btn btn-outline-dark btn-custom headerButton" type="button"
-                            onclick="window.location.href='/newProduct'">
+                        <button class="btn btn-outline-dark btn-custom headerButton" type="button" [routerLink]="['/newProduct']">
                             <i class="bi bi-plus-lg"></i>
                             <span class="fav-sellText"> Vender</span>
                         </button>
