Create a new chat from a product

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -83,10 +83,10 @@
                         </button>
                     </div>
                     <div>
-                        <button class="btn btn-outline-dark btn-custom headerButton" type="button" [routerLink]="['/chats']">
+                        <button class="btn btn-outline-dark btn-custom headerButton" type="button" [routerLink]="['/chats', '']">
                             <i class="bi bi-chat-fill"></i>
                             <span class="fav-sellText"> Chats</span>
-                        </button>
+                        </button>                          
                     </div>
                 </div>
                 
