--- a/frontend/src/app/components/product/product-list/product-list.component.html
+++ b/frontend/src/app/components/product/product-list/product-list.component.html
@@ -3,9 +3,12 @@
         <div class="">
         <h2 class="fw-bolder mb-3">{{ title }}</h2>
       </div>
-      <div *ngIf="!isLoading && products.length === 0" class="text-center text-muted my-5">
+      <div *ngIf="!isLoading && products.length === 0 && !fromProfile" class="text-center text-muted my-5">
         <i class="bi bi-search" style="font-size: 3rem;"></i>
         <p class="mt-3 fs-5">No se han encontrado resultados.</p>
+      </div>
+      <div *ngIf="!isLoading && productsFromParent.length === 0 && fromProfile" class="text-center">
+        <h3 class="py-4 mb-4 defaultText">Todavía no hay productos en esta sección</h3>
       </div>
       <div class="row otherProducts" id="products-list">
         <ng-template ngFor let-product [ngForOf]="products">
