Report list uploaded

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -37,7 +37,7 @@
                     </form>
                 </div>
                 <div class="col-2 loginButtons justify-content-end">
-                    <a href="../reports" style="text-decoration: none;">
+                    <a [routerLink]="'/reports'" style="text-decoration: none;">
                         <button class="btn btn-outline-dark btn-custom" type="submit">
                             <i class="bi bi-flag-fill"></i> Reportes
                         </button>
