--- a/frontend/src/app/components/user/profile-preview/profile-preview.component.html
+++ b/frontend/src/app/components/user/profile-preview/profile-preview.component.html
@@ -2,7 +2,7 @@
 <div class="d-flex align-items-center">
     <a href="../profile/{{userId}}" class="d-flex align-items-center text-decoration-none">
         <ng-component *ngIf="user?.hasImage; else noImage">
-        <img src="{{user?.image}}" class="rounded-circle me-3 user-img" alt="Vendedor">
+            <img [src]="user?.image" class="rounded-circle me-3 user-img" alt="Vendedor">
         </ng-component>
         <ng-template #noImage>
             <img src="assets/images/default_pfp.jpg" class="rounded-circle me-3 user-img" alt="Vendedor">
