--- a/frontend/src/app/components/user/profile/profile.component.html
+++ b/frontend/src/app/components/user/profile/profile.component.html
@@ -5,19 +5,22 @@
         <div class="profile-container text-center col-5">
             <h2 class="mb-4">{{user?.name}}</h2>
             <div class="profile-pic-wrapper">
-                <a class="d-inline-block position-relative" *ngIf="isOwnProfile" [routerLink]="['/editProfile']">
+                <a class="d-inline-block position-relative" [routerLink]="isOwnProfile ? ['/editProfile'] : null">
                     <ng-template #hasImage [ngTemplateOutlet]="user?.hasImage ? hasImage : noImage">
-                        <img class="profile-pic mb-3" [src]="user?.image" alt="pfp">
+                      <img class="profile-pic mb-3" [src]="user?.image" alt="pfp">
                     </ng-template>
                     <ng-template #noImage>
-                        <img class="profile-pic mb-3" src="assets/images/default_pfp.jpg" alt="pfp">
+                      <img class="profile-pic mb-3" src="assets/images/default_pfp.jpg" alt="pfp">
                     </ng-template>
-                    <a>
+                    <ng-container *ngIf="isOwnProfile">
+                      <a>
                         <span class="edit-icon">
-                            <img src="https://cdn-icons-png.flaticon.com/512/1250/1250615.png" alt="Editar">
+                          <img src="https://cdn-icons-png.flaticon.com/512/1250/1250615.png" alt="Editar">
                         </span>
-                    </a>
-                </a>
+                      </a>
+                    </ng-container>
+                  </a>
+                  
             </div>
             <form>
                 <div class="mb-3 text-start">
