--- a/frontend/src/app/components/reviews/review-list/review-list.component.html
+++ b/frontend/src/app/components/reviews/review-list/review-list.component.html
@@ -1,21 +1,29 @@
-<div *ngIf="reviews.length>0" class="container mt-4">
-    <h3>Reseñas</h3>
-    <div class="scrolling-wrapper">
+<div *ngIf="filter === 'reviews'">
+    <div *ngIf="reviews.length > 0; else noReviews">
+      <h3>Reseñas</h3>
+      <div class="scrolling-wrapper">
         <div *ngFor="let review of reviews" class="card">
-            <div class="card-body">
-                <h5 class="card-title">{{review.reviewOwner.name}}</h5>
-                <p class="card-text">{{review.description}}</p>
-                <p>
-                    <span class="text-warning">
-                        <i *ngFor="let star of stars; let i = index" 
-                        [class.bi-star-fill]="i < review.rating" 
-                        [class.bi-star]="i >= review.rating" 
-                        class="bi"></i>
-                    </span>
-                    - {{review.rating}}/5
-                </p>
-            </div>
+          <div class="card-body">
+            <h5 class="card-title">{{ review.reviewOwner.name }}</h5>
+            <p class="card-text">{{ review.description }}</p>
+            <p>
+              <span class="text-warning">
+                <i *ngFor="let star of stars; let i = index"
+                   [class.bi-star-fill]="i < review.rating"
+                   [class.bi-star]="i >= review.rating"
+                   class="bi"></i>
+              </span>
+              - {{ review.rating }}/5
+            </p>
+          </div>
         </div>
+      </div>
+      <hr>
     </div>
-    <hr>
-</div>
+  
+
+    <!-- <ng-template #noReviews>
+      <h3 class="text-secondary">Este usuario aún no tiene reseñas.</h3>
+    </ng-template> -->
+  </div>
+  
