fixed reviews and reviews in profile

--- a/frontend/src/app/components/reviews/review-list/review-list.component.html
+++ b/frontend/src/app/components/reviews/review-list/review-list.component.html
@@ -1,27 +1,21 @@
-<section class="py-4">
-  <div class="container otherProdContainer">
-<div class="">
-<h2 class="fw-bolder mb-3">Reseñas</h2></div>
-<div *ngIf="reviews && reviews.length > 0; else noReviews">
+<div *ngIf="reviews.length>0" class="container mt-4">
+  <h3>Reseñas</h3>
   <div class="scrolling-wrapper">
-    <div *ngFor="let review of reviews" class="card">
-      <div class="card-body">
-        <h5 class="card-title">{{ review.reviewOwner.name }}</h5>
-        <p class="card-text">{{ review.description }}</p>
-        <p>
-          <span class="text-warning">
-            <i *ngFor="let star of stars; let i = index" [class.bi-star-fill]="i < review.rating"
-              [class.bi-star]="i >= review.rating" class="bi"></i>
-          </span>
-          - {{ review.rating }}/5
-        </p>
+      <div *ngFor="let review of reviews" class="card">
+          <div class="card-body">
+              <h5 class="card-title">{{review.reviewOwner.name}}</h5>
+              <p class="card-text">{{review.description}}</p>
+              <p>
+                  <span class="text-warning">
+                      <i *ngFor="let star of stars; let i = index" 
+                      [class.bi-star-fill]="i < review.rating" 
+                      [class.bi-star]="i >= review.rating" 
+                      class="bi"></i>
+                  </span>
+                  - {{review.rating}}/5
+              </p>
+          </div>
       </div>
-    </div>
   </div>
   <hr>
 </div>
-<ng-template #noReviews>
-  <p>No hay reseñas disponibles.</p>
-</ng-template>
-</div>
-</section>
